Use a grid wrapper to wrap the grid to specify fixed size

--- a/styles.css
+++ b/styles.css
@@ -15,17 +15,19 @@ body {
     flex-direction: column;
     justify-content: center;
     background-color: #e1e1e1;
-    padding: 5%;
+    padding: 5% 0;
 }
 
 h1 {
     text-align: center;
-    margin-bottom: 10%;
+    margin-bottom: 2vh;
+    font-size: 5vh;
 }
 
 .content {
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 50px;
 }
 
@@ -141,10 +143,10 @@ input[type='color']:hover {
     transform: scale(1.05);
 }
 
-@media (max-width: 530px) {
+@media (max-width: 600px) {
     .content {
         flex-direction: column-reverse;
-        gap: 1%;
+        gap: 0px;
     }
     
     .toolbox {
@@ -152,13 +154,20 @@ input[type='color']:hover {
         flex-wrap: wrap;
         transform: scale(0.8);
     }
+    
+    .grid-area {
+        width: 100%;
+        max-width: 100%;
+    }
+    
 }
 
-@media (max-height: 790px) {
+@media ((max-height: 790px) and (max-width: 600px)) {
     
-    body {
-        transform: scale(0.8);
+    .grid-wrapper {
+        width: 35vh !important;
     }
+    
 }
 
 /* The grid & the canvas slider */
@@ -169,6 +178,15 @@ input[type='color']:hover {
     gap: 25px;
     user-select: none;
     max-width: 500px;
+    justify-content: center;
+    align-items: center;
+}
+
+.grid-wrapper {
+    border: 1px solid rgb(221, 221, 221);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    max-width: 100%;
+    width: 100%;
 }
 
 /* The entire grid */
@@ -176,9 +194,7 @@ input[type='color']:hover {
     background-color: rgb(240, 240, 240);
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    padding: 0.5%;
     gap: 0.25%;
-    max-width: 500px;
     aspect-ratio: 1/1;
     cursor: crosshair;
 }
